# QuoteWeave

./: .gitignore  README.md  compose.yaml  fix_line_endings.ps1  schema.postgresql
_old_frontend/: README.md  package-lock.json
_old_frontend/src/pages/: Landing.tsx  Quote.tsx
backend/: Dockerfile  cli.py  prestart.sh  pyproject.toml  requirements.txt  schema.postgresql
backend/app/: crud.py  db.py  embedding.py  main.py  model.py  models.py  populate.py  security.py  tagging.py
backend/app/data/: populate_db.py  quotes_sample.csv
backend/tests/: conftest.py  test_crud.py  test_main.py
diagram/: main.tex  main_apriori.tex  main_simple.tex
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend-next/: Dockerfile  globals.css  nginx.conf  package.json  pnpm-lock.yaml
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/app/about/: page.tsx
frontend-next/app/authors/: page.tsx
frontend-next/app/authors/[authorId]/: page.tsx
frontend-next/app/collections/: page.tsx
frontend-next/app/collections/[collectionId]/: page.tsx
frontend-next/app/collections/create/: page.tsx
frontend-next/app/collections/new/: page.tsx
frontend-next/app/contact/: page.tsx
frontend-next/app/login/: page.tsx
frontend-next/app/privacy/: page.tsx
frontend-next/app/profile/: page.tsx
frontend-next/app/profile/collections/: page.tsx
frontend-next/app/profile/edit/: page.tsx
frontend-next/app/profile/quotes/: page.tsx
frontend-next/app/quotes/: page.tsx
frontend-next/app/quotes/[quoteId]/: page.tsx
frontend-next/app/quotes/[quoteId]/edit/: page.tsx
frontend-next/app/quotes/new/: page.tsx
frontend-next/app/search/: page.tsx
frontend-next/app/settings/: page.tsx
frontend-next/app/signup/: page.tsx
frontend-next/app/tags/: page.tsx
frontend-next/app/tags/[tagName]/: page.tsx
frontend-next/components/: Navbar.tsx  QuoteDetailModal.tsx  author-search.tsx  quote-card.tsx  quote-detail-modal.tsx  theme-provider.tsx
frontend-next/lib/: api.ts  auth.tsx  author-utils.ts  collection-utils.ts  quote-utils.ts  tag-utils.ts  user-utils.ts
frontend/app/authors/: page.tsx
frontend/app/authors/[authorId]/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/profile/edit/: page.tsx
frontend/app/profile/quotes/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: author-card.tsx
frontend/components/quotes/: add-to-collection-view.tsx
frontend/lib/: api.ts  auth.tsx
frontend/src/: MainLayout.tsx  NavBar.tsx  api.ts  main.tsx  query.ts
frontend/src/pages/: Author.tsx  Collection.tsx  Explore.tsx  Landing.tsx  LogIn.tsx  Quotes.tsx  SignUp.tsx  index.ts
models/: pyproject.toml
models/notebooks/: .gitignore  clean_sample_dataset.ipynb  convert-from-flax-to-pt-4bit.ipynb  convert_to_4bit.ipynb  convert_to_4bit_from_checkpoint.ipynb  convert_to_bf16_from_checkpoint.ipynb  evaluation_results_base.json  evaluation_results_small.json  flan_training.ipynb  inference.ipynb  inference_example.ipynb  inference_example2.ipynb  quotes_sample.csv
(+5 files in other folders)
