[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.1",
    "flax>=0.10.6",
    "huggingface-hub[hf-xet]>=0.30.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jax[cuda12]>=0.5.3",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "swifter>=1.4.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.51.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
